Fixed Nav Grid Gap

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ nav {
   width: 80%;
   margin: auto;
   margin-top: 3%;
-  grid-gap: 40em;
+  grid-gap: 15em;
 }
 
 nav .social-media {
